fix: to link white space in home-title-container

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -180,6 +180,9 @@
   #home > div.ReviewContainer > div.Carousel {
     padding-top: 2.5em;
   }
+  #home > div.home-title-container > div > div > div > h3 {
+    margin-top: 0.75em !important;
+  }
   .LisgoHomeLogoContainer > svg {
     margin-top: 2em;
   }
@@ -214,7 +217,7 @@
     font-size: clamp(0.75rem, 0.3vw + 0.5rem, 5rem) !important;
   }
   .enquire-now-link {
-    font-size: clamp(1.25rem, 1.15vw + 0.5rem, 5rem) !important;
+    font-size: clamp(1rem, 1.1vw + 0.5rem, 5rem) !important;
   }
 }
 
@@ -245,5 +248,8 @@
   }
   .see-more-reviews-link {
     font-size: 0.75rem !important;
+  }
+  .enquire-now-link {
+    font-size: 1.2rem !important;
   }
 }
